<resources>
    <string name="app_name">inobi</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_create_spot">CreateSpot</string>
    <string name="title_activity_insert_spot_data">InsertSpotData</string>
    <string name="title_activity_spot_info">SpotInfo</string>
    <string name="people_present">Antal närvarande:</string>
    <string name="conversations">Antal pågående samtal:</string>
    <string name="collaborations">Antal samarbeten:</string>
    <string name="sitting">Andel som sitter:</string>
    <string name="flow">Antal som passerar:</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_first_time">FirstTime</string>
    <string name="title_activity_new_user">NewUser</string>
    <string name="saved_spot_data">data</string>
    <string name="saved_user_name">name</string>
    <string name="title_activity_about">About</string>

    <string name="hello_world">Hello world!</string>
</resources>
